<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy.</string>
    <string name="donuts">donuts</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="radiobutton">RadioButton</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="chosen">Chosen</string>
    <string name="nothing_clicked"></string>
</resources>
