<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:padding="10dp"
        android:text="@string/droid_desserts"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textintro"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:padding="10dp"
        android:text="@string/choose_a_dessert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textintro" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="135dp"
        android:layout_height="142dp"
        android:layout_below="@id/choose_dessert"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/donuts_are_glazed_and_sprinkled_with_candy"
        android:padding="10dp"
        android:src="@drawable/donut_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_dessert"
        app:srcCompat="@drawable/donut_circle"
        android:onClick="showDonutOrder"/>/>

    <TextView
        android:id="@+id/Donuts"
        android:layout_width="201dp"
        android:layout_height="142dp"
        android:layout_below="@+id/choose_dessert"
        android:layout_marginTop="120dp"
        android:layout_toEndOf="@id/donut"
        android:layout_toRightOf="@id/donut"
        android:padding="35dp"
        android:text="@string/donuts_are_glazed_and_sprinkled_with_candy"
        app:layout_constraintStart_toEndOf="@+id/donut"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="134dp"
        android:layout_height="156dp"
        android:layout_below="@id/donut"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling"
        android:padding="10dp"
        android:src="@drawable/icecream_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:srcCompat="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"/>/>

    <TextView
        android:id="@+id/Ice_creams"
        android:layout_width="202dp"
        android:layout_height="158dp"
        android:layout_below="@+id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:padding="35dp"
        android:text="@string/ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling"
        app:layout_constraintStart_toEndOf="@+id/ice_cream"
        app:layout_constraintTop_toBottomOf="@+id/Donuts"
        android:layout_toEndOf="@id/ice_cream" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="133dp"
        android:layout_height="122dp"
        android:layout_below="@id/ice_cream"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/froyo_is_premium_self_serve_frozen_yogurt"
        android:padding="10dp"
        android:src="@drawable/froyo_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ice_creams"
        app:srcCompat="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"/>/>

    <TextView
        android:id="@+id/Froyos"
        android:layout_width="201dp"
        android:layout_height="130dp"
        android:layout_below="@+id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:padding="35dp"
        android:text="@string/froyo_is_premium_self_serve_frozen_yogurt"
        app:layout_constraintStart_toEndOf="@+id/froyo"
        app:layout_constraintTop_toBottomOf="@+id/Ice_creams"
        android:layout_toEndOf="@id/froyo" />


</androidx.constraintlayout.widget.ConstraintLayout>